<resources>

    <string name="app_name">测试</string>
	<string name="hello_world">Hello World! </string>
	
	<string name="top_text">用户登录</string>
	<string name="username_label">用户:</string>
	<string name="login_username">请输入用户名</string>
	<string name="password_label">密码:</string>
	<string name="login_password">请输入密码</string>
	<string name="index_text">首页面</string>
	<string name="login_error">用户为admin，密码为admin</string>
	
	
	<!-- 接口地址 -->
	<string name="urlConnection">http://221.221.146.15:9090/androidpn</string>
<!-- 	<string name="urlConnection">http://10.10.38.108:8080/androidpn</string> -->
	
	<string name="user_login_action">/manage/login.action</string>
	
	<string name="action_search">Search</string>
	<string name="action_setting">Setting</string>
	
	<string name="action_plus">plus</string>
	<string name="group_chat">发起群聊</string>
	<string name="add_friends">添加朋友</string>
	<string name="watch_chat">视频聊天</string>
	<string name="to_sweep">扫一扫</string>
	<string name="photo_share">拍照分享</string>
	
	<string name="myself">自己</string>
	<string name="my_pic">我的相册</string>
	<string name="my_collect">我的收藏</string>
	<string name="my_cards">我的银行卡</string>
	<string name="my_setting">设置</string>
	<string name="my_feedback">意见反馈</string>
	
	<string name="message_text">消息</string>
	<string name="contacts_text">联系人</string>
	<string name="news_text">动态</string>
	<string name="setting_text">设置</string>
	
	<string name="chat_text">聊天</string>
	<string name="fount_text">发现</string>
	<string name="maillist_text">通讯录</string>
</resources>
